--- a/project3/Makefile
+++ b/project3/Makefile
@@ -1,5 +1,5 @@
-all: java
-
-java:
-
-    javac xkcdpwgen
+all: xkcdpwgen.class
+xkcdpwgen.class: xkcdpwgen.java
+    javac -classpath . xkcdpwgen.java
+clean: 
+    rm -f *.class
