--- a/project3/Makefile
+++ b/project3/Makefile
@@ -1,5 +1,5 @@
-all: xkcdpwgen.class
-xkcdpwgen.class: xkcdpwgen
-    javac -classpath . xkcdpwgen
-clean: 
-    rm -f *.class
+all: java
+
+java:
+
+        javac xkcdpwgen.java
